Fix diff screen overlapping with downstream version history (#1049)

--- a/web/src/scss/utilities/buttons.scss
+++ b/web/src/scss/utilities/buttons.scss
@@ -19,7 +19,7 @@
   display: inline-block;
   border: 0;
   border-radius: 3px;
-  transition: all .2s;
+  transition: background-color color border .2s;
   outline: none;
   position: relative;
 
