--- a/web/src/scss/utilities/utilities.scss
+++ b/web/src/scss/utilities/utilities.scss
@@ -90,6 +90,10 @@
 .u-display--inlineBlock { display: inline-block; }
 .u-display--none { display: none; }
 
+/* Visibility classes */
+
+.u-visibility--hidden { visibility: hidden;; }
+
 /* Border classes */
 
 .u-border--gray { border: 1px solid #DFDFDF; }
